--- a/2017-0003 (COD).md
+++ b/2017-0003 (COD).md
@@ -58,9 +58,8 @@ Material Scope
 (e) electronic communications data after receipt processed by the end-user
     concerned, or by a third party entrusted by that end-user;
 
-(f) electronic communications data before receipt processed by the end-users concerned or by a
-    third party entrusted by the end-user for the purpose of ensuring network and 
-    information security.
+(f) electronic communications data processed upon receipt by the end-users concerned or by a
+    third party entrusted by the end-user for the purpose of protecting the end-user’s terminal equipment.
 
 3. The processing of electronic communications data by the Union institutions, bodies,
     offices and agencies is governed by Regulation (EU) 2018/1725
@@ -126,8 +125,7 @@ Definitions
     service’, ‘interpersonal communications service’, ‘number-based interpersonal
     communications service’, ‘number-independent interpersonal communications
     service’, ‘end-user’ and ‘call’ in paragraphs (1), (4), (5), (6), (7), (14) and (31)
-    respectively of Article 2 of [Directive establishing the European Electronic
-    Communications Code];
+    respectively of Article 2 of Directive (EU) 2018/1972;
 
 (c) the definition of 'terminal equipment' in Article 1(1) of Commission
     Directive 2008/63/EC.
@@ -281,7 +279,8 @@ communications content only:
 2. Prior to the processing in accordance with point (b) of paragraph 1
     the provider shall carry out an assessment of the impact of the envisaged
     processing operations on the protection of electronic communications data and
-    consulted the supervisory authority. Article 36(2) and (3) of
+    consulted the supervisory authority if necessary pursuant to Article 36(1) of Regulation
+    (EU) 2016/679. Article 36(2) and (3) of
     Regulation (EU) 2016/679 shall apply to the consultation of the supervisory authority
 
 **Article 6b [previous art 6(2)]**
@@ -292,8 +291,8 @@ networks and services shall be permitted to process electronic communications
 metadata only if:
 
 (a) it is necessary for the purposes of network management or network optimisation,
-    or to meet quality of service requirements pursuant to Directive establishing the European Electronic
-    Communications Code or Regulation (EU) 2015/2120; or
+    or to meet quality of service requirements pursuant to Directive (EU) 2018/1972
+    or Regulation (EU) 2015/2120; or
 
 (b) it is necessary for calculating and billing interconnection payments or for the
     performance of an electronic communications service contract to which the enduser is party,
@@ -334,7 +333,7 @@ Compatible processing of electronic communications metadata
     particular regarding the relationship between end-users concerned and the provider;
 
 (c) the nature of the electronic communications metadata as well as the modalities of the
-    intended processing, in particular where such data or the intended processing
+    intended further processing, in particular where such data or the intended further processing
     could reveal categories of data, pursuant to Article 9 or 10 of Regulation (EU) 2016/679;
 
 (d) the possible consequences of the intended further processing for end-users;
@@ -451,9 +450,9 @@ Protection of end-users' terminal equipment information
     provided that conditions laid down in Article 28, or where applicable Article 26,
     of Regulation (EU) 2016/679 are met; or
 
-(da) it is necessary to maintain or restore the security of information society services,
-    prevent fraud or detect technical faults for the duration necessary for that purpose;
-    or
+(da) it is necessary to maintain or restore the security of information society services
+    or terminal equipment of the end-user, prevent fraud or detect technical faults for 
+    the duration necessary for that purpose; or
 
 (e) it is necessary for a software update provided that:
     (i) such update is necessary for security reasons and dos not in any way change the privacy settings chosen by the
@@ -534,8 +533,7 @@ Article 12
 Presentation and restriction of calling and connected line identification
 ```
 1. Where presentation of the calling and connected line identification is offered in
-    accordance with Article [115] of the Directive establishing the European Electronic
-    Communication Code, the providers of number-based
+    accordance with Article [115] of the Directive (EU) 2018/1972, the providers of number-based
     interpersonal communications services shall provide the following:
 
 (a) the calling end-user with the possibility of preventing the presentation of the calling
@@ -750,7 +748,7 @@ Supervisory authorities
     supervisory authorities responsible for monitoring the application of Regulation 
     (EU) 2016/679, they shall cooperate with the latter and,
     whenever appropriate with national regulatory authorities established pursuant to the
-    Directive Establishing the European Electronic Communications Code and other relevant authorities.
+    Directive (EU) 2018/1972 and other relevant authorities.
 
 ```
 Article 19
@@ -952,9 +950,8 @@ Article 26
 Committee
 ```
 1. The Commission shall be assisted by the Communications Committee established
-    under Article 110 of the [Directive establishing the European Electronic
-    Communications Code]. That committee shall be a committee within the meaning of
-    Regulation (EU) No 182/2011^12.
+    under Article 118 of the Directive (EU) 2018/1972
+    That committee shall be a committee within the meaning of Regulation (EU) No 182/2011.
 
 2. Where reference is made to this paragraph, Article 5 of Regulation (EU) No
     182/2011 shall apply.
