--- a/2017-0003 (COD).md
+++ b/2017-0003 (COD).md
@@ -55,11 +55,12 @@ Material Scope
     detection or prosecution of criminal offences or the execution of criminal penalties,
     including the safeguarding against and the prevention of threats to public security;
 
-(e) electronic communications data after receipt processed by the end-user
+(e) electronic communications data processed after receipt by the end-user
     concerned, or by a third party entrusted by that end-user;
 
 (f) electronic communications data processed upon receipt by the end-users concerned or by a
-    third party entrusted by the end-user for the purpose of protecting the end-user’s terminal equipment.
+    third party entrusted by the end-user for the purpose of protecting the end-user’s 
+    in order to ensure the security of the end-user’s network and information systems including their terminal equipment.
 
 3. The processing of electronic communications data by the Union institutions, bodies,
     offices and agencies is governed by Regulation (EU) 2018/1725
@@ -239,17 +240,19 @@ Permitted processing of electronic communications data
 1. Providers of electronic communications networks and services shall be permitted to process
     electronic communications data only if:
 
-(a) it is necessary to achieve the transmission of the communication; or
+(a) it is necessary to provide an electronic communication service; or
 
 (b) it is necessary to maintain or restore the security of electronic communications
     networks and services, or detect technical faults and/or errors and/or security risks and/or
     attacks in the transmission of electronic communications.
 
-(c) it is necessary to detect or prevent security risks and/or attacks on end-users’
+(c) it is necessary to detect or prevent security risks or attacks on end-users’
     terminal equipment;
 
 (d) it is necessary for compliance with a legal obligation to which the provider is subject
-    laid down by Union or Member State law in accordance with Article 11
+    laid down by Union or Member State law  which
+    respects the essence of the fundamental rights and freedoms and is a necessary and
+    proportionate measure in a democratic society to safeguard public security
 
 2. Electoronic communications data shall only be permitted to be processed for the
     duration necessary for the specified purpose or purposes according to Articles 6 to 6c 
@@ -262,14 +265,14 @@ Permitted processing of electronic communications data
     down in Article 28 of Regulation (EU) 2016/679 are met. 
 
 **Article 6a [previous art. 6(3)]**
-Permitted processing of electronic communications content 
+*Permitted processing of electronic communications content*
 
 1. Without prejudice to Article (6)1, Providers of the electronic
 communications networks and services shall be permitted to process electronic
 communications content only: 
 
 (a) for the purpose of the provision of an service requested by an
-    end-user for individual use if the requesting end-user has given consent and
+    end-user for purely individual use if the requesting end-user has given consent and
     where such requested processing does not adversely affect fundamental rights and
     interests of another person concerned; or
 
@@ -284,7 +287,7 @@ communications content only:
     Regulation (EU) 2016/679 shall apply to the consultation of the supervisory authority
 
 **Article 6b [previous art 6(2)]**
-Permitted processing of electronic communications metadata
+*Permitted processing of electronic communications metadata*
 
 Without prejudice to Article (6)1, providers of electronic communications
 networks and services shall be permitted to process electronic communications
@@ -315,7 +318,7 @@ metadata only if:
     (EU) 2016/679.
 
 **Article 6c [Previous art 6(2a)]**
-Compatible processing of electronic communications metadata
+*Compatible processing of electronic communications metadata*
 
 1. Where the processing for a purpose other than that for which the electronic
     communications metadata have been collected under Articles 6
@@ -368,26 +371,23 @@ Compatible processing of electronic communications metadata
     metadata shall no longer be processed for such purposes.
     
 **Article 6d [NEW]**
-Processing of electronic communications data for the purpose of detecting, deleting and
-reporting material constituting child pornography
+*Processing of electronic communications data for the purpose of preventing child sexual abuse*
 
 1. Without prejudice to Article (6)1, providers of number-independent interpersonal
     communications services shall be permitted to process electronic communication data
-    for the sole purpose of detecting, deleting and reporting material constituting child
-    pornography as defined in Article 2(c) of Directive 2011/93/EU, if the processing
+    for the sole purpose of preventing child sexual abuse and exploitation by detecting,
+    deleting and reporting material as defined in Article 2(c) of Directive 2011/93/EU, if the processing
     meets all of the following characteristics:
 
     (i) it creates a unique, non-reconvertible digital signature (“hash”) of material
         attached to electronic communications for the sole purpose of comparing that
         hash with a database containing hashes of material previously reliably identified
-        as constituting child pornography;
+        as constituting material defined in Article 2(c) of Directive 2011/93/EU;
 
     (ii) electronic communications data and hashes of material attached to electronic
         communications are erased immediately after comparison with the database
-        except in the cases where material constituting child pornography has been detected by virtue of a hash;;
-
-    (iii) it limits the probability of erroneous detection of material constituting child
-        pornography to at most 1 in 50 billion;
+        except in the cases where material constituting material defined in Article 2(c)
+        of Directive 2011/93/EU has been detected by virtue of a hash;
 
 2. The provider of number-independent interpersonal communications services
     shall, prior to processing, carry out an assessment of the impact and consult the
@@ -396,23 +396,18 @@ reporting material constituting child pornography
     activities concerning both automatic and manual processing of the data,
     including description of possible algorithms or databases used for the
     processing and means to limit the rate of erroneous detection of material
-    constituting child pornography and of the security measures, including
+    constituting defined in Article 2(c) of Directive 2011/93/EU and of the security measures, including
     limitation of personnel authorised to access electronic communications data, set
     up to protect end-users not involved in the communication of material
-    consituting child pornography, and to protect the consulted content.]
+    consituting defined in Article 2(c) of Directive 2011/93/EU, and to protect the consulted content.]
 
 ```
 Article 7
 Storage and erasure of electronic communications data
 ```
-1. Without prejudice to points (b), (c) and (d) of Article 6(1) and of Article 6a,
-    the provider of the electronic communications service shall erase electronic
-    communications content or make that data anonymous after receipt of electronic
-    communication content by the intended recipient or recipients. Upon the end-user's
-    explicit request the provider of the electronic communications service may store that
-    end-user's electronic communications content as an integral part of the service as
-    long as requested by the end-user. Such data may be processed in accordance with
-    Article 6 and 6a.
+1. The provider of the electronic communications service shall erase electronic
+    communications content or make that data anonymous when it is no longer necessary for
+    the purpose of processing in accordance to article 6(1) and 6a(1).
 
 2. Without prejudice to points (b), (c) and (d) of Article 6(1), points (a), (c), (d) and (f) of Article 6b and Article 6c,
     the provider of the electronic communications service shall erase electronic
@@ -424,8 +419,8 @@ Storage and erasure of electronic communications data
     may be kept until the end of the period during which a bill may lawfully be
     challenged or a payment may be pursued in accordance with national law.
 
-4. Union or Member state law may provide in accordance with Article 11 that the
-    electronic communications metadata is retained for a limited period that is longer
+4. Union or Member state law may provide that the electronic communications metadata 
+    is retained, in order to safeguar public security, for a limited period that is longer
     than the period set out in this Article .
 
 ```
@@ -794,9 +789,10 @@ European Data Protection Board
 4. The Board shall forward its opinions, guidelines, recommendations, and best
     practices to the Commission and make them public.
 
-5. The Board shall closely cooperate with the supervisory authorities referred to in
-    Article 18(0) for the purposes of the application of this Regulation. 
-    The Board shall, where appropriate, consult interested parties and give them the
+5. The Board shall consult the supervisory authorities referred to in Article 18(0) before
+    excercising any of the tasks referred to in paragraph 2
+
+6. The Board shall, where appropriate, consult interested parties and give them the
     opportunity to comment within a reasonable period. The Board shall, without
     prejudice to Article 76 of Regulation (EU) 2016/679, make the result of the
     consultation procedures publicly available.
@@ -834,7 +830,7 @@ Remedies
 Article 22
 Right to compensation and liability
 ```
-Any end-user who has suffered material or non-
+Any person who has suffered material or non-
 material damage as a result of an infringement of this Regulation shall have the right to
 receive compensation from the infringer for the damage suffered in accordance with
 Article 82 of Regulation (EU) 2016/679.
@@ -991,26 +987,6 @@ Entry into force and application
 
 2. Without prejudice to paragraph 3, this Regulation shall apply from 
     [24 months from the date of entry into force of this Regulation].
-
-[3. Until other specific union legislation on detection, deletion or reporting material
-    constituting child pornography has entered into force, this Regulation shall not apply to the processing of electronic communications data
-    by a provider of number-independent interpersonal communications services for the
-    sole purpose of detecting, deleting or reporting material constituting child
-    pornography as defined in Article 2(c) of Directive 2011/93/EU, if:
-
-    the processing meets all of the following characteristics:
-
-    (i) it creates a unique, non-reconvertible digital signature (“hash”) of material
-    attached to electronic communications for the sole purpose of comparing that
-    hash with a database containing hashes of material previously reliably identified
-    as constituting child pornography;
-
-    (ii) glectronic communications data and hashes of material attached to electronic
-    communications are erased immediately after comparison with the database, except 
-    in the cases where material constituting child pornography has been detected by virtue of a hash;
-
-    (iii) it limits the probability the rate of erroneous
-    detection of material constituting child pornography to at most 1 in 50 billion;]
 
 This Regulation shall be binding in its entirety and directly applicable in all Member States.
 
