--- a/2017-0003 (COD).md
+++ b/2017-0003 (COD).md
@@ -58,9 +58,9 @@ Material Scope
 (e) electronic communications data processed after receipt by the end-user
     concerned, or by a third party entrusted by that end-user;
 
-(f) electronic communications data processed upon receipt by the end-users concerned or by a
-    third party entrusted by the end-user for the purpose of protecting the end-user’s 
-    in order to ensure the security of the end-user’s network and information systems including their terminal equipment.
+(f) electronic communications data processed upon receipt by the end-users concerned, or by a
+    third party entrusted by the end-user in order to ensure the security of the end-user’s 
+    network and information systems including their terminal equipment.
 
 3. The processing of electronic communications data by the Union institutions, bodies,
     offices and agencies is governed by Regulation (EU) 2018/1725
@@ -252,7 +252,9 @@ Permitted processing of electronic communications data
 (d) it is necessary for compliance with a legal obligation to which the provider is subject
     laid down by Union or Member State law  which
     respects the essence of the fundamental rights and freedoms and is a necessary and
-    proportionate measure in a democratic society to safeguard public security
+    proportionate measure in a democratic society to safeguard the prevention,
+    investigation, detection or prosecution of criminal offences or the execution of
+    criminal penalties, and the safeguarding against and the prevention of threats to public security
 
 2. Electoronic communications data shall only be permitted to be processed for the
     duration necessary for the specified purpose or purposes according to Articles 6 to 6c 
@@ -357,15 +359,15 @@ metadata only if:
 3. For the purposes of this Article, the providers of electronic
     communications networks and services shall:
 
-(b) not share such data with third parties, unless it is made anonymous;
+(a) not share such data with third parties, unless it is made anonymous;
 
-(c) prior to the processing carry out an assessment of the impact of the envisaged
+(b) prior to the processing carry out an assessment of the impact of the envisaged
     processing operations on the protection of electronic communications data in
     accordance with Article 35 of Regulation (EU) 2016/679, which may result in the
     prior consultation of the supervisory authority in accordance with Article 36(1)
     to (3) of Regulation (EU) 2016/679; and
 
-(d) inform the end-user of specific processing on the basis of this Article and
+(c) inform the end-user of specific processing on the basis of this Article and
     of the right to object to such processing free of charge, at any time, and in an
     easy and effective manner. If the end-user objects, the electronic communications
     metadata shall no longer be processed for such purposes.
@@ -399,7 +401,11 @@ metadata only if:
     constituting defined in Article 2(c) of Directive 2011/93/EU and of the security measures, including
     limitation of personnel authorised to access electronic communications data, set
     up to protect end-users not involved in the communication of material
-    consituting defined in Article 2(c) of Directive 2011/93/EU, and to protect the consulted content.]
+    consituting defined in Article 2(c) of Directive 2011/93/EU, and to protect the consulted content.
+
+3. The provider of number-independent interpersonal communications services
+    shall inform the users about the processing taking place in accordance with this
+    article and provide suitable complaint procedure.]
 
 ```
 Article 7
@@ -420,8 +426,10 @@ Storage and erasure of electronic communications data
     challenged or a payment may be pursued in accordance with national law.
 
 4. Union or Member state law may provide that the electronic communications metadata 
-    is retained, in order to safeguar public security, for a limited period that is longer
-    than the period set out in this Article .
+    is retained, to safeguard the prevention, investigation, detection or prosecution 
+    of criminal offences or the execution of criminal penalties, and the safeguarding
+    against and the prevention of threats to public security, for a limited period that
+    is longer than the period set out in this Article .
 
 ```
 Article 8
@@ -441,7 +449,7 @@ Protection of end-users' terminal equipment information
 
 (d) it is necessary for audience measuring, provided that such measurement is
     carried out by the provider of the information society service requested by the end-
-    user or by a third party on behalf of one or more providers of the information society service 
+    user or by a third party, or by third parties jointly, on behalf of one or more providers of the information society service 
     provided that conditions laid down in Article 28, or where applicable Article 26,
     of Regulation (EU) 2016/679 are met; or
 
@@ -706,7 +714,7 @@ Unsolicited and direct marketing communications
     the direct marketing communication and the identity of the legal or natural person on behalf of whom
     the communication is sent
 
-(d) clearly and distinctly give the end-users who are natural persons a means to object or
+(c) clearly and distinctly give the end-users who are natural persons a means to object or
     to withdraw their consent, free of charge, at any time, and in an easy and effective
     manner, to receiving further direct marketing communications, and 
     shall provide the necessary information to this end. This means shall also
@@ -790,7 +798,9 @@ European Data Protection Board
     practices to the Commission and make them public.
 
 5. The Board shall consult the supervisory authorities referred to in Article 18(0) before
-    excercising any of the tasks referred to in paragraph 2
+    excercising any of the tasks referred to in paragraph 2 where those authorities are not
+    the authorities responsible for monitoring the application of Regulation (EU)
+    2016/679
 
 6. The Board shall, where appropriate, consult interested parties and give them the
     opportunity to comment within a reasonable period. The Board shall, without
@@ -915,7 +925,7 @@ Exercise of the delegation
     conditions laid down in this Article.
 
 2. The power to adopt delegated acts referred to in Article 8(4) shall be conferred on the
-    Commission for an indeterminate period of time from [the data of entering into force
+    Commission for an indeterminate period of time from [the date of entering into force
     of this Regulation].
 
 3. The delegation of power referred to in Article 8(4) may be revoked at any time by
@@ -985,8 +995,7 @@ Entry into force and application
 1. This Regulation shall enter into force on the twentieth day following that of its
     publication in the _Official Journal of the European Union_.
 
-2. Without prejudice to paragraph 3, this Regulation shall apply from 
-    [24 months from the date of entry into force of this Regulation].
+2. This Regulation shall apply from [24 months from the date of entry into force of this Regulation].
 
 This Regulation shall be binding in its entirety and directly applicable in all Member States.
 
