--- a/2017-0003 (COD).md
+++ b/2017-0003 (COD).md
@@ -240,7 +240,7 @@ Permitted processing of electronic communications data
 1. Providers of electronic communications networks and services shall be permitted to process
     electronic communications data only if:
 
-(a) it is necessary to provide an electronic communication service; or
+(a) it is necessary to achieve the transmission of the electronic communication; or
 
 (b) it is necessary to maintain or restore the security of electronic communications
     networks and services, or detect technical faults and/or errors and/or security risks and/or
@@ -256,20 +256,20 @@ Permitted processing of electronic communications data
     investigation, detection or prosecution of criminal offences or the execution of
     criminal penalties, and the safeguarding against and the prevention of threats to public security
 
-2. Electoronic communications data shall only be permitted to be processed for the
-    duration necessary for the specified purpose or purposes according to Articles 6 to 6c 
+2. Electronic communications data shall only be permitted to be processed for the
+    duration necessary for the specified purpose or purposes according to Articles 6 to 6b 
     and if the specified purpose or purposes cannot be fulfilled by processing information
     that is made anonymous.
 
 3. A third party acting on behalf of a provider of electronic communications network or
     services may be permitted to process electronic communications data in
-    accordance with Articles 6 to 6c provided that the conditions laid
+    accordance with Articles 6 to 6b provided that the conditions laid
     down in Article 28 of Regulation (EU) 2016/679 are met. 
 
 **Article 6a [previous art. 6(3)]**
 *Permitted processing of electronic communications content*
 
-1. Without prejudice to Article (6)1, Providers of the electronic
+1. Without prejudice to Article 6(1), providers of the electronic
 communications networks and services shall be permitted to process electronic
 communications content only: 
 
@@ -291,86 +291,51 @@ communications content only:
 **Article 6b [previous art 6(2)]**
 *Permitted processing of electronic communications metadata*
 
-Without prejudice to Article (6)1, providers of electronic communications
-networks and services shall be permitted to process electronic communications
-metadata only if:
-
-(a) it is necessary for the purposes of network management or network optimisation,
-    or to meet quality of service requirements pursuant to Directive (EU) 2018/1972
-    or Regulation (EU) 2015/2120; or
-
-(b) it is necessary for calculating and billing interconnection payments or for the
-    performance of an electronic communications service contract to which the enduser is party,
-    in particular if necessary for billing or if it is necessary for detecting or stopping
-    fraudulent, or abusive use of, or subscription to, electronic communications services; or
+1. Without prejudice to Article 6(1), providers of electronic communications
+    networks and services shall be permitted to process electronic communications
+    metadata only if:
 
 (c) the end-user concerned has given consent to the processing of
     communications metadata for one or more specified purposes; or
+
+(ca) it is necessary for the provision of an electronic communications service for which
+    the end-user has concluded a contract; or
 
 (d) it is necessary to protect the vital interest of a natural person, in the case of
     emergency, in general upon request of a public authority, in accordance with Union or
     Member State law; or
 
-(f) it is necessary for statistical purposes, or for scientific research purposes, provided 
-    it is in accordance with Union or Member State law and subject to
-    appropriate safeguards, including encryption and pseudonymisation, to
-    protect fundamental rights and the interest of the end-users. Processing of
-    electronic communications metadata under this point shall be done in accordance
-    with paragraph 6 of Article 21 and paragraphs 1, 2 and 4 of Article 89 of Regulation
-    (EU) 2016/679.
+(e) it is necessary for the purpose of the legitimate interests pursued by the electronic
+    communications service or network provider, except when such interest is overridden
+    by the interests or fundamental rights and freedoms of the end-user, in particular
+    where the end-user is a child.
 
-**Article 6c [Previous art 6(2a)]**
-*Compatible processing of electronic communications metadata*
+    The end-user’s interests shall be deemed to override the interests of the electronic
+    communications service or network provider if the provider uses the electronic
+    communications metadata to determine the nature and characteristics of the end-user
+    or to build an individual profile of the end-user. The end-user’s interests shall also be
+    deemed to override the interests of the provider if the electronic communications
+    metadata contains special categories of personal data referred to in Article 9(1) of
+    Regulation (EU) 2016/679, unless the conditions set out in Article 9(2)(g) and (j) of
+    Regulation (EU) 2016/679 are met.
 
-1. Where the processing for a purpose other than that for which the electronic
-    communications metadata have been collected under Articles 6
-    and 6b is not based on the end-user's consent or on a Union or Member State law
-    which constitutes a necessary and proportionate measure in a democratic society to
-    safeguard the objectives referred to in Article 11, the provider of electronic
-    communications networks and services shall, in order to ascertain whether processing
-    for another purpose is compatible with the purpose for which the electronic
-    communications metadata are initially collected, take into account, inter alia:
+2. Electronic communications metadata processed pursuant to paragraph 1(e) shall not
+    be shared by the provider with any third party without prejudice to Article 6(3)
+    unless it has been made anonymous. Prior to processing electronic communications
+    metadata, the provider shall:
 
-(a) any link between the purposes for which the electronic communications metadata
-    have been collected and the purposes of the intended further processing;
+(a) carry out an assessment of the impact of envisaged processing on the confidentiality
+    of communications and the privacy of end-users in accordance with Article 35 of
+    Regulation (EU) 2016/679, which may result in the prior consultation of the
+    supervisory authority in accordance with Article 36(1) to (3) of Regulation (EU)
+    2016/679;
 
-(b) the context in which the electronic communications metadata have been collected, in
-    particular regarding the relationship between end-users concerned and the provider;
+(b) inform the end-user of the envisaged processing operations based on paragraph 1(e)
+    and of the end-user’s right to object to such processing, at any time, free of charge
+    and in an easy and effective manner; and
 
-(c) the nature of the electronic communications metadata as well as the modalities of the
-    intended further processing, in particular where such data or the intended further processing
-    could reveal categories of data, pursuant to Article 9 or 10 of Regulation (EU) 2016/679;
-
-(d) the possible consequences of the intended further processing for end-users;
-
-(e) the existence of appropriate safeguards, such as pseudonymisation and encryption.
-    
-2. Such processing, if considered compatible, may only take place, provided that:
-
-(a) electronic communications metadata is erased or made anonymous
-    as soon as it is no longer needed to fulfil the purpose,
-
-(b) the processing is limited to electronic communications metadata that is
-    pseudonymised, and
-
-(c) the electronic communications metadata is not used to determine the nature or
-    characteristics of an end-user or to build a profile of an end-user.
-
-3. For the purposes of this Article, the providers of electronic
-    communications networks and services shall:
-
-(a) not share such data with third parties, unless it is made anonymous;
-
-(b) prior to the processing carry out an assessment of the impact of the envisaged
-    processing operations on the protection of electronic communications data in
-    accordance with Article 35 of Regulation (EU) 2016/679, which may result in the
-    prior consultation of the supervisory authority in accordance with Article 36(1)
-    to (3) of Regulation (EU) 2016/679; and
-
-(c) inform the end-user of specific processing on the basis of this Article and
-    of the right to object to such processing free of charge, at any time, and in an
-    easy and effective manner. If the end-user objects, the electronic communications
-    metadata shall no longer be processed for such purposes.
+(c) implement appropriate technical and organisational measures, such as
+    pseudonymisation and encryption.
     
 **Article 6d [NEW]**
 *Processing of electronic communications data for the purpose of preventing child sexual abuse*
@@ -415,13 +380,13 @@ Storage and erasure of electronic communications data
     communications content or make that data anonymous when it is no longer necessary for
     the purpose of processing in accordance to article 6(1) and 6a(1).
 
-2. Without prejudice to points (b), (c) and (d) of Article 6(1), points (a), (c), (d) and (f) of Article 6b and Article 6c,
+2. Without prejudice to points (b), (c) and (d) of Article 6(1), points (c), (ca), (d) and (e) of Article 6b(1),
     the provider of the electronic communications service shall erase electronic
     communications metadata or make that data anonymous when it is no longer needed
     for the purpose of the transmission of a communication.
 
 3. Where the processing of electronic communications metadata takes place for the
-    purpose of billing in accordance with point (b) of Article 6b, the relevant metadata
+    purpose of billing, the relevant metadata
     may be kept until the end of the period during which a bill may lawfully be
     challenged or a payment may be pursued in accordance with national law.
 
@@ -453,21 +418,43 @@ Protection of end-users' terminal equipment information
     provided that conditions laid down in Article 28, or where applicable Article 26,
     of Regulation (EU) 2016/679 are met; or
 
-(da) it is necessary to maintain or restore the security of information society services
-    or terminal equipment of the end-user, prevent fraud or detect technical faults for 
-    the duration necessary for that purpose; or
-
-(e) it is necessary for a software update provided that:
-    (i) such update is necessary for security reasons and dos not in any way change the privacy settings chosen by the
-    end-user,
-    (ii) the end-user is informed in advance each time an update is being installed, and
-    (iii) the end-user is given the possibility to postpone or turn off the automatic 
-    installation of these updates; or 
-    
 (f) it is necessary to locate terminal equipment when an end-user makes an emergency
     communication either to the single European emergency number ‘112’ or a national
     emergency number, in accordance with Article 13(3).
-    
+
+(g) it is necessary for the purpose of the legitimate interests pursued by a service
+    provider to use processing and storage capabilities of terminal equipment or to collect
+    information from an end-user’s terminal equipment, except when such interest is
+    overridden by the interests or fundamental rights and freedoms of the end-user.
+    The end-user’s interests shall be deemed to override the interests of the service
+    provider where the end-user is a child or where the service provider processes, stores
+    or collects the information to determine the nature and characteristics of the end-user
+    or to build an individual profile of the end-user or the processing, storage or
+    collection of the information by the service provider contains special categories of
+    personal data as referred to in Article 9(1) of Regulation (EU) 2016/679.
+
+1a. Service providers using processing and storage capabilities of the end-user’s terminal
+    equipment or collecting information from the end-user’s terminal equipment
+    pursuant to paragraph 1(g) shall not share the information with any third party other
+    than its processors, acting in accordance with Article 28 of Regulation (EU) 2016/679
+    mutatis mutandis, unless it has been made anonymous. Prior to any use of processing
+    or storage facilities in, or collection of information from the end-user’s terminal
+    equipment, the service provider shall:
+
+(a) carry out an assessment of the impact of the use of the processing and storage
+    capabilities or the collection of information from the end-users’ terminal equipment
+    and of the envisaged processing on the confidentiality of communications and the
+    privacy of end-users in accordance with Article 35 of Regulation (EU) 2016/679,
+    which may result in the prior consultation of the supervisory authority in accordance
+    with Article 36(1) to (3) of Regulation (EU) 2016/679;
+
+(b) inform the end-user of the envisaged processing operations based on paragraph 1(g)
+    and of the end-user’s right to object to such processing, free of charge, at any time,
+    and in an easy and effective manner; and
+
+c) implement appropriate technical and organsational measures, such as
+    pseudonymisation and encryption.
+
 2. The collection of information emitted by terminal equipment of the end-user to enable it to connect
     to another device and, or to network equipment shall be prohibited, except on the
 	following grounds:
