--- a/2017-0003 (COD).md
+++ b/2017-0003 (COD).md
@@ -56,11 +56,7 @@ Material Scope
     including the safeguarding against and the prevention of threats to public security;
 
 (e) electronic communications data processed after receipt by the end-user
-    concerned, or by a third party entrusted by that end-user;
-
-(f) electronic communications data processed upon receipt by the end-users concerned, or by a
-    third party entrusted by the end-user in order to ensure the security of the end-user’s 
-    network and information systems including their terminal equipment.
+    concerned;
 
 3. The processing of electronic communications data by the Union institutions, bodies,
     offices and agencies is governed by Regulation (EU) 2018/1725
